--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "portal-sala-aula-client",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://seu-usuario.github.io/portal-sala-aula",
+  "homepage": "https://mxlsc-xxx.github.io/portal-sala-de-aula",
   "dependencies": {
     "@headlessui/react": "^1.7.0",
     "@heroicons/react": "^2.0.0",
